hphp/hack/test/typecheck/sealed/trait3.php.exp
File "trait3.php", line 4, characters 7-7:
A trait cannot be sealed (Typing[4245])
