hphp/hack/test/typecheck/sealed/trait3.php
<?hh // strict

<<__Sealed(A::class)>>
trait T {}

abstract class A {
  use T;
}
